Submit button Label name modifed of Fare.html

--- a/WebContent/Fare.html
+++ b/WebContent/Fare.html
@@ -64,7 +64,7 @@
 	<form action="fareenq" class="tab red" method="post">
 		From Station: <input type="text" name="fromstation"><br />
 		<br /> To Station: <input type="text" name="tostation"><br />
-		<br /> <input type="submit" value=" Get Fare "><br />
+		<br /> <input type="submit" value=" Get Fare Details"><br />
 	</form>
 	<br />
 
