error html  modified and committed

--- a/WebContent/error.html
+++ b/WebContent/error.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>E-Trains</title>
+<title>E-Trains Message</title>
 <link rel="stylesheet" href="UserHome_Css.css">
 <style>
 </style>
